# mcc

./: .gitignore  README.md  pyproject.toml
docs/: app.js  index.html  styles.css
mcc/: __init__.py  cli.py  dx.py  merge.py  publish.py  stats.py
mcc/preprocess/: __init__.py  common.py  ocr.py  render.py  segment.py
mcc/proofread/: __init__.py  server.py
post/csv/: page-0001-col-1.csv  page-0001-col-2.csv  page-0001-col-3.csv  page-0001-col-4.csv  page-0001-col-5.csv  page-0002-col-1.csv  page-0002-col-2.csv  page-0002-col-3.csv  page-0002-col-4.csv  page-0002-col-5.csv  page-0003-col-1.csv  page-0003-col-2.csv  page-0003-col-3.csv  page-0003-col-4.csv  page-0003-col-5.csv  page-0004-col-1.csv  page-0004-col-2.csv  page-0004-col-3.csv  page-0004-col-4.csv  page-0004-col-5.csv  page-0005-col-1.csv  page-0005-col-2.csv  page-0005-col-3.csv  page-0005-col-4.csv  page-0005-col-5.csv  page-0006-col-1.csv  page-0006-col-2.csv  page-0006-col-3.csv  page-0006-col-4.csv  page-0006-col-5.csv  page-0007-col-1.csv  page-0007-col-2.csv  page-0007-col-3.csv  page-0007-col-4.csv  page-0007-col-5.csv  page-0008-col-1.csv  page-0008-col-2.csv  page-0008-col-3.csv  page-0008-col-4.csv  page-0008-col-5.csv  (+1205 more)
post/merged/: modern-chinese-common-words.csv
post/meta/: page-0001-col-1.json  page-0001-col-2.json  page-0001-col-3.json  page-0001-col-4.json  page-0001-col-5.json  page-0002-col-1.json  page-0002-col-2.json  page-0002-col-3.json  page-0002-col-4.json  page-0002-col-5.json  page-0003-col-1.json  (+904 more)
sites/: app.js  index.html  styles.css
tests/: test_ocr_page1.py
(+8 files in other folders)
